--- a/recipes/no-bake-cookies.html
+++ b/recipes/no-bake-cookies.html
@@ -1,1 +1,16 @@
-<h1><img src="https://www.allrecipes.com/thmb/GrCg0J-SdrWv0JQRbuWpnFgjv4o=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1001473-71407d83ebf64a7e8cdbc67c4352a80f.jpg" alt="No bake cookies" width="310" height="310">No Bake Cookies</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>No Bake Cookies</title>
+</head>
+<body>
+    <h1>No Bake Cookies</h1>
+    <img src="https://www.allrecipes.com/thmb/GrCg0J-SdrWv0JQRbuWpnFgjv4o=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1001473-71407d83ebf64a7e8cdbc67c4352a80f.jpg" alt="No bake cookies" width="310" height="310">
+    <h2>Description</h2><p>No Bake Cookies are a type of cookie that requires no oven time. They are typically made by combining ingredients such as oats, cocoa powder, butter or margarine, sugar, milk, and sometimes peanut butter. </p>
+    <p>The mixture is brought to a boil on the stove, then dropped by spoonfuls onto waxed paper or parchment to cool and set. The cookies are known for their quick preparation and chewy texture, making them a popular choice for homemade treats.</p>
+    
+</body>
+</html>
+
