Added directions finishing no-bake-cookies.html

--- a/recipes/no-bake-cookies.html
+++ b/recipes/no-bake-cookies.html
@@ -23,6 +23,15 @@
         <li>1/2 cup unsweetened cocoa powder</li>
         <li>1/2 cup milk</li>
         <li>1/2 cup butter</li>
+    <hr>
+    <h3>Directions</h3>
+    <ol>
+        <li>Step 1: Line a baking sheet with waxed paper.</li>
+        <li>Step 2: Mix oats & coconut in a lrg bowl until thoroughly combined.</li>
+        <li>Step 3: Stir sugar, cocoa powder, milk, and butter together in a saucepan over medium heat until smooth. Bring to a boil and cook, stirring constantly, for 2 minutes. Pour over oats and coconut; mix quickly to coat.</li>
+        <li>Step 4: Drop tablespoonfuls onto the prepared baking sheet. Let cookies cool & harden;store in an airtight container.</li>
+
+    </ol>
 
     </ul>
     
