Removed repetative steps in directions segment. Finished whiskey-burger.html

--- a/recipes/no-bake-cookies.html
+++ b/recipes/no-bake-cookies.html
@@ -11,7 +11,8 @@
     <img src="https://www.allrecipes.com/thmb/GrCg0J-SdrWv0JQRbuWpnFgjv4o=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1001473-71407d83ebf64a7e8cdbc67c4352a80f.jpg" alt="No bake cookies" width="310" height="310">
     </div>
     <hr>
-    <h2>Description</h2><p>No Bake Cookies are a type of cookie that requires no oven time. They are typically made by combining ingredients such as oats, cocoa powder, butter or margarine, sugar, milk, and sometimes peanut butter. </p>
+    <h2>Description</h2>
+    <p>No Bake Cookies are a type of cookie that requires no oven time. They are typically made by combining ingredients such as oats, cocoa powder, butter or margarine, sugar, milk, and sometimes peanut butter. </p>
     <p>The mixture is brought to a boil on the stove, then dropped by spoonfuls onto waxed paper or parchment to cool and set. The cookies are known for their quick preparation and chewy texture, making them a popular choice for homemade treats.</p>
     <h3>
         Ingredients :
@@ -26,10 +27,10 @@
     <hr>
     <h3>Directions</h3>
     <ol>
-        <li>Step 1: Line a baking sheet with waxed paper.</li>
-        <li>Step 2: Mix oats & coconut in a lrg bowl until thoroughly combined.</li>
-        <li>Step 3: Stir sugar, cocoa powder, milk, and butter together in a saucepan over medium heat until smooth. Bring to a boil and cook, stirring constantly, for 2 minutes. Pour over oats and coconut; mix quickly to coat.</li>
-        <li>Step 4: Drop tablespoonfuls onto the prepared baking sheet. Let cookies cool & harden;store in an airtight container.</li>
+        <li>Line a baking sheet with waxed paper.</li>
+        <li>Mix oats & coconut in a lrg bowl until thoroughly combined.</li>
+        <li>Stir sugar, cocoa powder, milk, and butter together in a saucepan over medium heat until smooth. Bring to a boil and cook, stirring constantly, for 2 minutes. Pour over oats and coconut; mix quickly to coat.</li>
+        <li>Drop tablespoonfuls onto the prepared baking sheet. Let cookies cool & harden;store in an airtight container.</li>
 
     </ol>
 
