git commit "Added third and final recipe html file"

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="/odin-recipes/recipes/no-bake-cookies.html">No Bake Cookies</a>
+    <a href="/odin-recipes/recipes/whiskey-burger.html">Triple Seared Whiskey Burger</a>
+    <a href="/odin-recipes/recipes/butter-schnitzel.html">Butter Schnitzel</a>
 </body>
 </html>
