Made links into UL

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="/odin-recipes/recipes/no-bake-cookies.html">No Bake Cookies</a>
-    <a href="/odin-recipes/recipes/whiskey-burger.html">Triple Seared Whiskey Burger</a>
-    <a href="/odin-recipes/recipes/butter-schnitzel.html">Butter Schnitzel</a>
+    <ul>
+    <li><a href="/odin-recipes/recipes/no-bake-cookies.html">No Bake Cookies</a></li>
+    <li><a href="/odin-recipes/recipes/whiskey-burger.html">Triple Seared Whiskey Burger</a></li>
+    <li><a href="/odin-recipes/recipes/butter-schnitzel.html">Butter Schnitzel</a></li>
+    </ul>
 </body>
 </html>
