Added some style changes & links to home page on recipe pages

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-    <li><a href="/odin-recipes/recipes/no-bake-cookies.html">No Bake Cookies</a></li>
-    <li><a href="/odin-recipes/recipes/whiskey-burger.html">Triple Seared Whiskey Burger</a></li>
-    <li><a href="/odin-recipes/recipes/butter-schnitzel.html">Butter Schnitzel</a></li>
+    <li><a href="/odin-recipes/recipes/no-bake-cookies.html"><img src="https://www.allrecipes.com/thmb/GrCg0J-SdrWv0JQRbuWpnFgjv4o=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1001473-71407d83ebf64a7e8cdbc67c4352a80f.jpg" alt="No bake cookies" width="310" height="310">No Bake Cookies</a></li>
+    <li><a href="/odin-recipes/recipes/whiskey-burger.html"><img src="https://www.allrecipes.com/thmb/A8je_hnhA8cTVqUzIqytsdHVerU=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8668974_Triple-Seared-Whiskey-Burger-4x3-cropped-2d545961c6b04f11900b40e998527bf7.jpg" alt="Triple Seared Whiskey Burger" width="310" height="310">Triple Seared Whiskey Burger</a></li>
+    <li><a href="/odin-recipes/recipes/butter-schnitzel.html"><img src="https://www.allrecipes.com/thmb/7KmqyNP3HJHVJ11evqmWYfOPKc4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1117121-butter-schnitzel-naples34102-4x3-1-76105d8f31494ddd9153903f8516100c.jpg" alt="Butter Schnitzel" width="310" height="310">Butter Schnitzel</a></li>
     </ul>
 </body>
 </html>
