--- a/recipes/butter-schnitzel.html
+++ b/recipes/butter-schnitzel.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Butter Schnitzel</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Butter Schnitzel</h1>
-    <img src="https://www.allrecipes.com/thmb/7KmqyNP3HJHVJ11evqmWYfOPKc4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1117121-butter-schnitzel-naples34102-4x3-1-76105d8f31494ddd9153903f8516100c.jpg" alt="Butter Schnitzel" width="310" height="310">
+    <img src="https://www.allrecipes.com/thmb/7KmqyNP3HJHVJ11evqmWYfOPKc4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1117121-butter-schnitzel-naples34102-4x3-1-76105d8f31494ddd9153903f8516100c.jpg" alt="Butter Schnitzel" width="310" height="310"><br>
+    <a href="../index.html">Home</a>
     <hr>
     <h2>Description: </h2>
     <p>Butter schnitzel is a delicious dish originating from Austria, where a tenderized cutlet of meat, usually veal or chicken, is breaded and fried until golden brown. The schnitzel is then topped with a rich and creamy butter sauce infused with lemon juice and parsley, adding a tangy and savory flavor. The butter sauce enhances the crispiness of the schnitzel, creating a delightful contrast of textures. This dish is often served with sides like potato salad or spaetzle, making it a hearty and satisfying meal.</p>
