--- a/recipes/whiskey-burger.html
+++ b/recipes/whiskey-burger.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Triple Seared Whiskey Burger</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Triple Seared Whiskey Burger</h1>
-    <img src="https://www.allrecipes.com/thmb/A8je_hnhA8cTVqUzIqytsdHVerU=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8668974_Triple-Seared-Whiskey-Burger-4x3-cropped-2d545961c6b04f11900b40e998527bf7.jpg" alt="Triple Seared Whiskey Burger" width="310" height="310">
+    <img src="https://www.allrecipes.com/thmb/A8je_hnhA8cTVqUzIqytsdHVerU=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8668974_Triple-Seared-Whiskey-Burger-4x3-cropped-2d545961c6b04f11900b40e998527bf7.jpg" alt="Triple Seared Whiskey Burger" width="310" height="310"><br>
+    <a href="../index.html">Home</a>
     <hr>
     <h2>
         Description: 
