--- a/recipes/no-bake-cookies.html
+++ b/recipes/no-bake-cookies.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>No Bake Cookies</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>No Bake Cookies</h1>
     <div>
-    <img src="https://www.allrecipes.com/thmb/GrCg0J-SdrWv0JQRbuWpnFgjv4o=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1001473-71407d83ebf64a7e8cdbc67c4352a80f.jpg" alt="No bake cookies" width="310" height="310">
+    <img src="https://www.allrecipes.com/thmb/GrCg0J-SdrWv0JQRbuWpnFgjv4o=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1001473-71407d83ebf64a7e8cdbc67c4352a80f.jpg" alt="No bake cookies" width="310" height="310"><br>
+    <a href="../index.html">Home</a>
     </div>
     <hr>
     <h2>Description</h2>
